  - ffmpeg: drop support for pre-0.5 ffmpeg
  - ffmpeg: support libavformat 0.7
  - oggflac: delete this obsolete plugin
  - dsdiff: new decoder plugin
* output:
  - httpd: support for streaming to a DLNA client
  - osx: allow user to specify other audio devices
  - raop: new output plugin
  - shout: add possibility to set url
  - roar: new output plugin for RoarAudio
* state_file: add option "restore_paused"
* cue: show CUE track numbers
* allow port specification in "bind_to_address" settings


ver 0.16.5 (2010/??/??)
* configure.ac
  - disable assertions in the non-debugging build
  - show solaris plugin result correctly
  - add option --enable-solaris-output
* pcm_format: fix 32-to-24 bit conversion (the "silence" bug)
* input:
  - rewind: reduce heap usage
* decoder:
  - ffmpeg: higher precision timestamps
  - ffmpeg: don't require key frame for seeking
  - fix CUE track seeking
* player:
  - make seeking to CUE track more reliable
  - the "seek" command works when MPD is stopped
  - restore song position from state file (bug fix)
  - fix crash that sometimes occurred when audio device fails on startup
  - fix absolute path support in playlists
* WIN32: close sockets properly
* install systemd service file if systemd is available


ver 0.16.4 (2011/09/01)
* don't abort configure when avahi is not found
* auto-detect libmad without pkg-config
* fix memory leaks
* don't resume playback when seeking to another song while paused
* apply follow_inside_symlinks to absolute symlinks
* fix playback discontinuation after seeking
* input:
  - curl: limit the receive buffer size
  - curl: implement a hard-coded timeout of 10 seconds
* decoder:
  - ffmpeg: workaround for semantic API change in recent ffmpeg versions
  - flac: validate the sample rate when scanning the tag
  - wavpack: obey all decoder commands, stop at CUE track border
* encoder:
  - vorbis: don't send end-of-stream on flush
* output:
  - alsa: fix SIGFPE when alsa announces a period size of 0